[package]
name = "rust-gravity"
version = "0.1.0"
edition = "2024"

[dependencies]
cxx = "1.0"
autocxx = "0.28.0"
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"
protoc-bin-vendored = "3.1.0"
spdlog-rs = "0.4"
cpp = "0.5"


[build-dependencies]
cxx-build = "1.0"
autocxx-build = "0.28.0"
cpp_build = "0.5"
