cmake_minimum_required(VERSION 3.17)
include(GravitySupport)
project(BasicDataProduct)

find_package(PThreadsWin32 REQUIRED)
gravity_find_protobuf(ON)
gravity_find_zeromq(ON)
gravity_find_spdlog(ON)
find_package(GravityKeyValueParser QUIET)
find_package(Gravity QUIET)

set(CMAKE_DEBUG_POSTFIX _d)
add_executable(BasicDataProductPublisher BasicDataProductPublisher.cpp)
set_target_properties(BasicDataProductPublisher PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
target_link_libraries(BasicDataProductPublisher gravity)
add_dependencies(BasicDataProductPublisher gravity_protobufs)

add_executable(BasicDataProductSubscriber BasicDataProductSubscriber.cpp)
set_target_properties(BasicDataProductSubscriber PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
target_link_libraries(BasicDataProductSubscriber gravity)
add_dependencies(BasicDataProductSubscriber gravity_protobufs)
install(TARGETS BasicDataProductPublisher BasicDataProductSubscriber DESTINATION bin)

